--- a/Sparc.Blossom.Server/appsettings.Development.json
+++ b/Sparc.Blossom.Server/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "WebClientUrl": "https://localhost:7130"
 }
