--- a/Sparc.Blossom.Web/Sparc.Blossom.Web.csproj
+++ b/Sparc.Blossom.Web/Sparc.Blossom.Web.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -13,8 +13,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
+    <PackageReference Include="Sparc.Ibis" Version="7.0.5" />
+    <PackageReference Include="Sparc.Kernel" Version="7.0.0" />
+    <PackageReference Include="Sparc.Notifications.Twilio" Version="7.0.2" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <None Include="compilerconfig.json" />
     <None Include="wwwroot\Styles\Pages\Index.scss" />
