--- a/Sparc.Blossom.Server/Properties/launchSettings.json
+++ b/Sparc.Blossom.Server/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7129;http://localhost:5167",
+      "applicationUrl": "https://localhost:7129",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
