--- a/Sparc.Blossom.Server/Sparc.Blossom.csproj
+++ b/Sparc.Blossom.Server/Sparc.Blossom.csproj
@@ -33,8 +33,8 @@
   <ItemGroup>
     <PackageReference Include="BuildWebCompiler2022" Version="1.14.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0" />
-    <PackageReference Include="Sparc.Ibis" Version="7.0.13" />
-    <PackageReference Include="Sparc.Kernel" Version="7.0.31" />
+    <PackageReference Include="Sparc.Blossom.Server" Version="7.1.0-pre.7" />
+    <PackageReference Include="Sparc.Ibis" Version="7.1.0-pre.2" />
   </ItemGroup>
 
 </Project>
