Blazorify JS calls

--- a/Sparc.Blossom.Server/Sparc.Blossom.Server.csproj
+++ b/Sparc.Blossom.Server/Sparc.Blossom.Server.csproj
@@ -37,4 +37,8 @@
     <PackageReference Include="Sparc.Kernel" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
